# KernelForge

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  TEST_PLAN.md  blog_post.md  castlib-plan.md  clean-code.sh  generate.sh  generate_all_optimized_kernels.py  generate_text_input.py  get_gpu_specs.py  load_data_set.sh  optimize_kernel.py  package-lock.json  package.json  print_prompt.py  prompt.md  prompt_output.txt  requirements-desktop.txt  requirements.txt  roadmap.md  run_cast.py  run_cast_autotune.py  ui-features.md
cgins-frontend/: package-lock.json  package.json
docker/: cgins-codex.Dockerfile
docs/: FileFormat.md  benchmarking-roadmap.md  cast-runtime.md  cli.md  features.md  motivation.md  requirements.md  system-architecture.md
frontend/: .gitignore  ConfigContext.cl.jac  GlowButton.cl.jac  Home.cl.jac  IllustratedCard.cl.jac  Mascot.cl.jac  NewProject.cl.jac  OpDetails.cl.jac  Project.cl.jac  README.md  Settings.cl.jac  SplashScreen.cl.jac  config.json  jac.toml  main.jac  styles.css
frontend/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  updater.pub
frontend/src-tauri/binaries/: jac-sidecar.bat  jac-sidecar.sh  kf-ui-server.py
frontend/src-tauri/src/: main.rs
kernelforge/: __init__.py  run_cast.py
paper_benchmarks/: DESIGN.md  ICLR_10_MODEL_BENCHMARK_PLAN.md  IMPLEMENTATION_PLAN.md  PAPER_BENCH_SELF_AUDIT.md  PILOT_3_MODEL_PLAN.md  QWEN_PROJECT_DISCOVERY.md  README.md  RUNBOOK_QWEN_DGX_SPARK.md  __init__.py  run_paper_bench_tests.sh
scripts/: benchmark_project.py  benchmark_project_ops.py  cgins_auth.py  codex_advanced_generate.py  (+10 more)
(+613 files in other folders)
