[package]
name = "kernel-forge-desktop"
version = "1.0.0"
description = "Kernel Forge desktop application"
authors = ["dhravidk <dhravid@umich.edu>"]
license = "MIT"
repository = "https://github.com/TheJoshBrod/CGinS"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-updater = "2.10.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
custom-protocol = ["tauri/custom-protocol"]
